// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleFilter render interactions SearchBar should match snap shot when sorting type is set 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render interactions SearchBar should match snap shot without sorting type 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      A to Z
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render interactions should call prop handler on click 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render interactions should match snap shot when sorting type is set 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render snapshots 📸 SearchBar should match snap shot when sorting type is set 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render snapshots 📸 SearchBar should match snap shot without sorting type 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      A to Z
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render snapshots 📸 SimpleFilter should match snap shot when sorting type is set 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;

exports[`SimpleFilter render snapshots 📸 SimpleFilter should match snap shot without sorting type 1`] = `
<div
  className="quick__sorting__container"
>
  <ul
    className="sorting__content"
  >
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Newest
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      A to Z
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Z to A
    </li>
    <li
      className="sorting__titles"
      onClick={[Function]}
    >
      Oldest
    </li>
  </ul>
</div>
`;
